--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,7 +9,7 @@
                 tools:context=".MainActivity">
 
     <TextView
-        android:id=""
+        android:id="@+id/text_view"
         android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
